--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,5 +1,9 @@
 name: simple action workflow
-on: [push]
+on: 
+    schedule:
+        -   cron: "1 * * * *"
+    pull_request:
+        types: [closed,assigned,opened,reopened]
 jobs:
     run-github-actions:
         runs-on: ubuntu-latest
