--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,25 +1,35 @@
 name: simple action workflow
-on: 
-    schedule:
-        -   cron: "1 * * * *"
-    pull_request:
-        types: [closed,assigned,opened,reopened]
+
+on:
+  schedule:
+    - cron: "1 * * * *"
+  pull_request:
+    types: [closed, assigned, opened, reopened]
+
 jobs:
-    run-github-actions:
-        runs-on: ubuntu-latest
-        steps:
-            -   name: List files
-                run: |
-                    pwd
-                    ls -a
-                    echo $GITHUB_SHA
-                    echo $GITHUB_REPOSITORY
-                    echo $GITHUB_WORKSPACE
-                    echo ${{github.token}}
-            -   name: checkout
-                uses: actions/checkout@v1
-            -   name: List files after checkout
-                run: |
-                    pwd
-                    ls -a
-            
+  run-github-actions:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: List files
+        run: |
+          pwd
+          ls -a
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo ${{ github.token }}
+
+  checkout-code:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2  # Use version 2 of the checkout action
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}  # Use the PR branch
+
+      - name: List files after checkout
+        run: |
+          pwd
+          ls -a
