--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,6 +1,7 @@
 name: simple action workflow
-on: [push]
-    
+on: 
+    pull_request:
+        types: [closed,assigned,opened,reopened]
 jobs:
     run-github-actions:
         runs-on: ubuntu-latest
